# Password-Manager

./: README.md  pyproject.toml
docs/: feature-tech.md  how-it-works.md
docs/superpowers/specs/: 2026-06-21-password-manager-design.md
pm/: __init__.py  backup.py  cli.py  crypto.py  generator.py  models.py  session.py  vault.py
tests/: conftest.py
tests/integration/: test_backup.py  test_cli.py  test_session_flows.py  test_vault.py
tests/unit/: test_crypto.py  test_generator.py  test_models.py
