[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "password-manager"
version = "0.1.0"
description = "Local, offline, multi-user CLI password manager with per-site password generation"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42",
    "argon2-cffi>=23",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "hypothesis>=6"]

[project.scripts]
pm = "pm.cli:main"

[tool.setuptools.packages.find]
include = ["pm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast, isolated tests of pure modules (no DB, no I/O)",
    "integration: tests across storage/session/CLI with a real SQLite vault",
]
